# LTS-PathTracer

./: CMakeLists.txt  README.md  cameras.json  compile_commands.json
assets/outputs-ppm/: 120vfov.ppm  adaptive_early_converge.ppm  air_bubble.ppm  alt_view.ppm  alt_view_zoomed.ppm  alternate_viewpoint.ppm  bvh.cpp  bvh_test.cpp  bvh_triangle_mesh.ppm  camera_vfov.ppm  cornell.ppm  earth.ppm  first_dielectric.ppm  first_metal_zoomed_out.ppm  fuzzed_metals.ppm  glass_sphere.ppm  hittable_class.ppm  movable_camera.ppm  no_bvh.ppm  shaded_sphere.ppm  temp.ppm
scenes/: bunny_obj.json  cornell.json  cornell_box.json  earth.json  instance.json  spheres.json
src/: main.cc  main.cpp
src/core/: color.h  interval.cpp  interval.h  mat4.h  math_utils.h  random.h  vec3.h
src/geom/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  hittable.h  instance.cpp  instance.h  mesh.h  quad.cpp  quad.h  rect.cpp  rect.h  sphere.cpp  sphere.h  square.cpp  square.h  triangle.cpp  triangle.h
src/integrator/: cpu_ray_integrator.h  gpu_ray_integrator.h  sampler.h
src/material/: material.cpp  texture.cpp  texture.h
src/renderer/: mega_kernel.h  wavefront.cc  wavefront.cpp
src/scene/: camera.cpp  camera.h  image.cpp  scene-loader.cpp  scene.cpp  scene.h  scene_loader.h
